@@ -44,6 +44,7 @@ for( i = 0 ; i < burnin ; i ++ ){
 for( i = 0 ; i < maxtime ; i ++ ){
 	C.monteCarloStep()
 	Cstat.centroids()
+	console.log( Cstat.getConnectedness() )
 	if( i % framerate == 0 ){
 		Cim.clear( "FFFFFF" )
 		//Cim.drawCells( 2, "990000" )
